# ace

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
examples/shelby-access-control-solana/programs/ace_hook/: Cargo.toml
examples/shelby-access-control-solana/programs/ace_hook/src/: lib.rs
examples/shelby-custom-flow-solana/programs/custom_acl/: Cargo.toml
vss-common/: Cargo.toml
vss-common/src/: aptos.rs  lib.rs  session.rs
worker-components/dkg-worker/: Cargo.toml
worker-components/dkg-worker/src/: lib.rs  main.rs
worker-components/dkr-dst/: Cargo.toml
worker-components/dkr-dst/src/: lib.rs  main.rs
worker-components/dkr-src/: Cargo.toml
worker-components/dkr-src/src/: lib.rs  main.rs
worker-components/epoch-change-cur/: Cargo.toml
worker-components/epoch-change-cur/src/: lib.rs  main.rs
worker-components/epoch-change-nxt/: Cargo.toml
worker-components/epoch-change-nxt/src/: lib.rs  main.rs
worker-components/keyless-fixture-dumper/: Cargo.toml
worker-components/keyless-fixture-dumper/src/: main.rs
worker-components/keyless-verify/: Cargo.toml
worker-components/keyless-verify/src/: auth_key.rs  circuit.rs  groth16.rs  jwk.rs  lib.rs  pih.rs  poseidon.rs  sample_pinned.rs  types.rs  verify.rs
worker-components/network-node/: Cargo.toml  Dockerfile
worker-components/network-node/src/: config.rs  crypto.rs  http_server.rs  lib.rs  main.rs  onchain.rs  reconstruction.rs  runtime.rs  secret_usage.rs  secrets.rs  verify.rs
worker-components/network-node/src/http_server/: mod.rs  serve.rs  state.rs  status.rs  tests.rs  tests_support.rs
worker-components/network-node/src/http_server/flows/: basic.rs  custom.rs  mod.rs  timing.rs  vrf.rs  vrf_share.rs
worker-components/network-node/src/http_server/outcome/: context.rs  fields.rs  flow.rs  log.rs  mod.rs  reason.rs  result.rs
worker-components/network-node/src/http_server/request/: body.rs  dispatch.rs  metadata.rs  mod.rs  parse.rs  share.rs
worker-components/network-node/src/http_server/shares/: keypair.rs  lookup.rs  mod.rs  response.rs  test_helpers.rs  tibe.rs  vrf.rs
worker-components/network-node/src/node/: chain_rpc.rs  concurrency.rs  config.rs  handler.rs  mod.rs  tasks.rs
worker-components/network-node/src/node/maintainer/: cleanup.rs  epoch_config.rs  mod.rs  reconcile.rs  reconcile_loop.rs  servers.rs  state.rs  state_init.rs  touch.rs
worker-components/network-node/src/node/maintainer/active-secret-sessions/: mod.rs  selection.rs  share.rs  spawn.rs  stale.rs  task.rs  task_run.rs
worker-components/network-node/src/node/maintainer/epoch/: current.rs  mod.rs  next.rs
worker-components/network-node/src/node/state_view/: fetch.rs  mod.rs  proposal.rs  types.rs
worker-components/network-node/src/verify/: aptos_account.rs  aptos_account_any.rs  aptos_account_any_account.rs  aptos_account_any_local.rs  aptos_account_any_local_secp256k1.rs  aptos_account_deferred.rs  aptos_account_federated_keyless.rs  aptos_account_keyless.rs  aptos_account_multi_ed25519.rs  aptos_account_multi_key.rs  aptos_account_multi_key_deferred.rs  aptos_account_single.rs  aptos_account_webauthn.rs  aptos_account_webauthn_challenge.rs  aptos_account_webauthn_prehash.rs  aptos_binding.rs  aptos_cache.rs  aptos_constants.rs  aptos_custom.rs  aptos_dispatch.rs  aptos_federated_keyless.rs  aptos_hooks.rs  aptos_keyless.rs  aptos_message.rs  aptos_multi_key.rs  aptos_proof.rs  aptos_proof_serde.rs  limits.rs  mod.rs  solana.rs  solana_txn.rs
worker-components/network-node/src/verify/aptos/: account.rs  binding.rs  custom.rs  dispatch.rs  ed25519.rs  federated_keyless.rs  hooks.rs  keyless.rs  message.rs  mod.rs  multi_ed25519.rs  proof.rs  proof_serde.rs
worker-components/network-node/src/verify/aptos/account/: federated_keyless.rs  keyless.rs  multi_ed25519.rs  single.rs  (+1 more)
worker-components/network-node/src/verify/ibe_aptos_basic_flow/: account.rs  account_any.rs  account_any_account.rs  account_any_local_secp256k1.rs  account_deferred.rs  account_federated_keyless.rs  account_multi_key_deferred.rs  account_single.rs  account_webauthn.rs  account_webauthn_prehash.rs  any.rs  cache.rs  constants.rs  federated_keyless.rs  hooks.rs  message.rs  mod.rs  multi_ed25519.rs  multi_key.rs
worker-components/network-node/src/verify/ibe_aptos_custom_flow/: mod.rs
worker-components/network-node/src/verify/ibe_solana_basic_flow/: mod.rs
worker-components/network-node/src/verify/ibe_solana_custom_flow/: mod.rs
worker-components/network-node/src/verify/shared/: mod.rs
worker-components/network-node/src/verify/vrf_aptos/: mod.rs
worker-components/network-node/src/verify_shared/: mod.rs
worker-components/network-node/src/verify_shared/aptos/: account_any_account.rs  account_any_local.rs  account_keyless.rs  account_multi_ed25519.rs  hooks.rs  message.rs  mod.rs  multi_ed25519.rs  multi_key.rs
worker-components/node-msg-gateway/: Cargo.toml
worker-components/node-msg-gateway/src/: lib.rs
worker-components/pke/: Cargo.toml
worker-components/pke/src/: lib.rs  pke_hpke_x25519_chacha20poly1305.rs  pke_hybrid_x25519_mlkem768_chacha20poly1305.rs
worker-components/vss-common/: Cargo.toml
worker-components/vss-common/src/: aptos.rs  bcs_stream.rs  crypto.rs  group.rs  lib.rs  node_wire.rs  offchain.rs  pke.rs  pke_hpke_x25519_chacha20poly1305.rs  pke_hybrid_x25519_mlkem768_chacha20poly1305.rs  session.rs  share_reconstruction.rs  sig.rs  sigma_dlog_eq.rs  sigma_dlog_linear.rs  vss_types.rs
worker-components/vss-common/tests/: gas_station.rs
worker-components/vss-dealer/: Cargo.toml
worker-components/vss-dealer/src/: lib.rs  main.rs
worker-components/vss-recipient/: Cargo.toml
worker-components/vss-recipient/src/: lib.rs  main.rs
worker-components/vss-store/: Cargo.toml
worker-components/vss-store/src/: lib.rs
worker-rs/: Cargo.toml
worker-rs/src/: aptos_rpc.rs  bcs.rs  crypto.rs  dkg.rs  main.rs  public_server.rs  server.rs  share_crypto.rs  signer.rs  store.rs  types.rs  verify.rs  vss.rs  vss_dealer.rs  vss_recipient.rs
(+611 files in other folders)
