# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "ace-anchor-kit",
    "worker-components/vss-common",
    "worker-components/vss-dealer",
    "worker-components/vss-recipient",
    "worker-components/dkg-worker",
    "worker-components/dkr-src",
    "worker-components/dkr-dst",
    "worker-components/epoch-change-cur",
    "worker-components/epoch-change-nxt",
    "worker-components/network-node",
]
