[package]
name = "worker-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker-rs"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
ed25519-dalek = "2"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
http = "1"

# BLS12-381 from arkworks
ark-bls12-381 = { version = "0.4", features = ["curve"] }
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }

[patch.crates-io]
# Use the same version as aptos-core to avoid linker conflicts
