# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dkr-dst"
version = "0.1.0"
edition = "2021"
description = "On-chain DKR new-committee recipient client."

[[bin]]
name = "dkr-dst"
path = "src/main.rs"

[lib]
name = "dkr_dst"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
vss-recipient = { path = "../vss-recipient" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
