# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "epoch-change-cur"
version = "0.1.0"
edition = "2021"
description = "On-chain epoch-change current-committee client: touch + DKR-src for one Session."

[[bin]]
name = "epoch-change-cur"
path = "src/main.rs"

[lib]
name = "epoch_change_cur"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
dkr-src = { path = "../dkr-src" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
