# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "keyless-fixture-dumper"
version = "0.1.0"
edition = "2021"
description = "One-shot binary that prints SAMPLE_* keyless test fixtures from aptos-core in a TS-pasteable form."

[[bin]]
name = "keyless-fixture-dumper"
path = "src/main.rs"

[dependencies]
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", rev = "8ec3fb76716abf2e1ee8cb85fa41d0eb212200cb" }
aptos-types  = { git = "https://github.com/aptos-labs/aptos-core", rev = "8ec3fb76716abf2e1ee8cb85fa41d0eb212200cb" }
hex = "0.4"
serde_json = "1"
