# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "keyless-verify"
version = "0.1.0"
edition = "2021"
description = "Off-chain verification of Aptos keyless signatures (BCS wire-format compatible with aptos-types::keyless)."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde-big-array = "0.5"
bcs = "0.1"
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
ed25519-dalek = "2"
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
thiserror = "1"
hex-literal = "0.4"
# BN254 Poseidon hash with iden3/circomlib round constants — bit-compatible
# with `aptos_crypto::poseidon_bn254` and the ts-sdk's `poseidon-lite`.
# arnaucube's reference port (1..=16 arities; ark 0.4 compatible). Pinned
# to the same rev the keyless circuit references.
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark", rev = "6d2487aa1308d9d3860a2b724c485d73095c1c68" }
num-bigint = "0.4"
base64 = "0.21"
once_cell = "1"
