# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "network-node"
version = "0.1.0"
edition = "2021"
description = "On-chain network-node supervisor: manages DKG, DKR-src, and DKR-dst sub-tasks."

[[bin]]
name = "network-node"
path = "src/main.rs"

[lib]
name = "network_node"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
dkg-worker = { path = "../dkg-worker" }
dkr-src = { path = "../dkr-src" }
dkr-dst = { path = "../dkr-dst" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["http1"] }
hex = "0.4"
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
sha2 = "0.10"
