# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "network-node"
version = "0.1.0"
edition = "2021"
description = "Network node: URH, HTTP, and network::touch. Epoch-change DKR/DKG runs in epoch-change-cur / epoch-change-nxt."

[[bin]]
name = "network-node"
path = "src/main.rs"

[[bin]]
name = "bench-request-mem"
path = "src/bin/bench_request_mem.rs"

[lib]
name = "network_node"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
epoch-change-cur = { path = "../epoch-change-cur" }
epoch-change-nxt = { path = "../epoch-change-nxt" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bcs = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["http1"] }
hex = "0.4"
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
sha2 = "0.10"
ed25519-dalek = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
