# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "network-node"
version = "0.1.0"
edition = "2021"
description = "Network node: URH, HTTP, and network::touch. Epoch-change DKR/DKG runs in epoch-change-cur / epoch-change-nxt."

[[bin]]
name = "network-node"
path = "src/main.rs"

[lib]
name = "network_node"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
vss-store = { path = "../vss-store" }
epoch-change-cur = { path = "../epoch-change-cur" }
epoch-change-nxt = { path = "../epoch-change-nxt" }
aptos-keyless-common = { path = "../aptos-keyless-common" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
bcs = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["http1"] }
tower-http = { version = "0.6", features = ["cors"] }
hex = "0.4"
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
ed25519-dalek = "2"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
futures = "0.3"
