# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "node-msg-gateway"
version = "0.1.0"
edition = "2021"
description = "Authenticated node-to-node message gateway for worker clients."

[lib]
name = "node_msg_gateway"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["http1", "http2"] }
bcs = "0.1"
ed25519-dalek = "2"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
