# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vss-recipient"
version = "0.1.0"
edition = "2021"
description = "On-chain VSS recipient client."

[[bin]]
name = "vss-recipient"
path = "src/main.rs"

[lib]
name = "vss_recipient"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
anyhow = "1"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
