# Copyright (c) Aptos Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vss-store"
version = "0.1.0"
edition = "2021"
description = "Persistent store interface and implementations for off-chain VSS state."

[lib]
name = "vss_store"
path = "src/lib.rs"

[dependencies]
vss-common = { path = "../vss-common" }
anyhow = "1"
bcs = "0.1"
postgres = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

[dev-dependencies]
tempfile = "3"
