[package]
name = "ace_hook"
version = "0.1.0"
description = "ACE Hook - allows consumers to prove access by signing a transaction that can be presented to decryption key providers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ace_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
access_control = { path = "../access_control", features = ["no-entrypoint"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
